// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebView renders a web view when a url is provided 1`] = `
<View
  style={
    {
      "flex": 1,
      "height": "100%",
      "minHeight": 300,
    }
  }
  testID="webview-test"
>
  <View
    onError={[Function]}
    onLoad={[Function]}
    onMessage={[Function]}
    onShouldStartLoadWithRequest={[Function]}
    source={
      {
        "uri": "https://mendix.com",
      }
    }
    style={
      {
        "height": "100%",
        "width": "100%",
      }
    }
    testID="mockWebView"
    userAgent=""
  />
</View>
`;

exports[`WebView renders a web view when html content is provided 1`] = `
<View
  style={
    {
      "flex": 1,
      "height": "100%",
      "minHeight": 300,
    }
  }
  testID="webview-test"
>
  <View
    onError={[Function]}
    onLoad={[Function]}
    onMessage={[Function]}
    onShouldStartLoadWithRequest={[Function]}
    source={
      {
        "html": "Hello, world!",
      }
    }
    style={
      {
        "height": "100%",
        "width": "100%",
      }
    }
    testID="mockWebView"
    userAgent=""
  />
</View>
`;

exports[`WebView renders an error when no url or content is provided 1`] = `
<View
  style={{}}
  testID="webview-test"
>
  <Text
    style={
      {
        "color": "red",
        "fontWeight": "bold",
      }
    }
  >
    No URL or content was provided.
  </Text>
</View>
`;
